fixed white space near header

--- a/CAGISWebsite/wwwroot/css/site.css
+++ b/CAGISWebsite/wwwroot/css/site.css
@@ -98,9 +98,6 @@ body {
     float: left;
 }
 
-.navbar {
-    height: 100% !important;
-}
 
 #ck-button:hover {
     background: red;
